==============
lxml changelog
==============

Under development
==================

Features added
--------------

* New parser classes ``XMLPullParser`` and ``HTMLPullParser`` for
  incremental parsing, as implemented for ElementTree in Python 3.4.

Bugs fixed
----------

* Raise ``ValueError`` when trying to append an Element to itself or
  to one of its own descendants.

* LP#1206077: htmldiff discarded whitespace from the output.

* Compressed plain-text serialisation to file-like objects was broken.

Other changes
-------------

* ``iterparse()`` was rewritten to use the new ``*PullParser``
  classes internally.


3.2.3 (2013-07-28)
==================

Bugs fixed
----------

* Fix support for Python 2.4 which was lost in 3.2.2.


3.2.2 (2013-07-28)
==================

Features added
--------------

Bugs fixed
----------

* LP#1185701: spurious XMLSyntaxError after finishing iterparse().

* Crash in lxml.objectify during xsi annotation.

Other changes
-------------

* Return values of user provided element class lookup methods are now
  validated against the type of the XML node they represent to prevent
  API class mismatches.


3.2.1 (2013-05-11)
==================

Features added
--------------

* The methods ``apply_templates()`` and ``process_children()`` of XSLT
  extension elements have gained two new boolean options ``elements_only``
  and ``remove_blank_text`` that discard either all strings or whitespace-only
  strings from the result list.

Bugs fixed
----------

* When moving Elements to another tree, the namespace cleanup mechanism
  no longer drops namespace prefixes from attributes for which it finds
  a default namespace declaration, to prevent them from appearing as
  unnamespaced attributes after serialisation.

* Returning non-type objects from a custom class lookup method could lead
  to a crash.

* Instantiating and using subtypes of Comments and ProcessingInstructions
  crashed.

Other changes
-------------


3.2.0 (2013-04-28)